src/objects/XO_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>XO Exception</relationshipLabel>
        <relationshipName>XO_Exception</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failure_Area__c</fullName>
        <description>Field used to describe where an error originated from - helpful in tracking down failure source.</description>
        <label>Failure Area</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operative.One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote to Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCV Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zuora Sync</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>This field holds the caught exception line number if available.</description>
        <label>Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>This field holds the caught exception message.</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Object_Id__c</fullName>
        <label>Related Object Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Field used to describe the severity of the failure.</description>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trivial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>This field holds the stack trace information for the caught exception.</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if XO Exception object has been sync&apos;ed</description>
        <inlineHelpText>Indicates if the XO Exception object has been sync&apos;d to external logging system</inlineHelpText>
        <label>Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This holds the exception type which was caught.</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>XO Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Failure_Area__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Message__c</columns>
        <columns>Related_Object_Id__c</columns>
        <columns>Severity__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Failed_Exceptions_Most_Recent_First</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Related_Object_Id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Failed Exceptions Most Recent First</label>
    </listViews>
    <listViews>
        <fullName>Main</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Main</label>
    </listViews>
    <listViews>
        <fullName>Where_Type_Contains_Zuora</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Related_Object_Id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>Zuora</value>
        </filters>
        <label>Where Type Contains Zuora</label>
    </listViews>
    <listViews>
        <fullName>today</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Line_Number__c</columns>
        <columns>Message__c</columns>
        <columns>Related_Object_Id__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>today</label>
    </listViews>
    <listViews>
        <fullName>today_account</fullName>
        <columns>NAME</columns>
        <columns>Line_Number__c</columns>
        <columns>Message__c</columns>
        <columns>Related_Object_Id__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Object_Id__c</field>
            <operation>startsWith</operation>
            <value>001</value>
        </filters>
        <label>today_account</label>
    </listViews>
    <listViews>
        <fullName>today_lead</fullName>
        <columns>NAME</columns>
        <columns>Line_Number__c</columns>
        <columns>Message__c</columns>
        <columns>Related_Object_Id__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Object_Id__c</field>
            <operation>startsWith</operation>
            <value>00Q</value>
        </filters>
        <label>today_lead</label>
    </listViews>
    <nameField>
        <label>XO Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XO Exception</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>